# Borderlands

./: .flake8  .gitignore  .pre-commit-config.yaml  .prefectignore  .ruff.toml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  index.html  manage.py  mkdocs.yml  prefect.yaml  pyproject.toml  tool.py
.github/workflows/: docker-deploy.yml  prefect-deploy.yml  publish-docs.yml  pytest.yml  static-analysis.yml
Datasets/Media Inventory/: index.html
Datasets/Oryx/: index.html
License/: index.html
about/: index.html
blocks/: aws.py  core.py  github.py  kaggle.py  oryx.py  slack.py  tf.py  utils.py
borderlands/: assets.py  blocks.py  datasets.py  definitions.py  deployer.py  enums.py  media.py  oryx.py  paths.py  schema.py  storage.py
borderlands/media_stage/: extract.py  transform.py
borderlands/oryx/: __init__.py  assets.py  blocks.py  deployment.py  extract.py  flows.py  stage.py  transform.py
borderlands/oryx_parser/: evidence.py
borderlands/parser/: article.py  (+5 more)
deployments/: orchestrator-daily.yaml  oryx-media-trigger.yaml  oryx-staging-daily.yaml  oryx.py
docs/: License.md  Media Inventory.md  Media.md  Oryx.md  about.md  index.md
flows/: kaggle.py  media.py  orchestrator.py  oryx.py  oryx_media.py  oryx_stage.py  publish.py
infrastructure/: README.md  ecs.tf  main.tf  network.tf  outputs.tf  s3.tf  slack-app.yaml  variables.tf
kaggle/: README.md  dataset-metadata.json
scripts/: docs.py
search/: search_index.json
tests/: conftest.py  test_blocks.py  test_flows.py  test_oryx.py  test_parser.py  test_transform.py
(+91 files in other folders)
